@@ -2,6 +2,18 @@
 
         Reviewed by Eric Seidel.
 
+        include links to actual.png files for new pixel tests
+        https://bugs.webkit.org/show_bug.cgi?id=58831
+
+        Load image elements to confirm whether the files exist.
+        Image elements will load without being appended to the DOM.
+
+        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:
+
+2011-04-18  Ojan Vafai  <ojan@chromium.org>
+
+        Reviewed by Eric Seidel.
+
         add a zoomed view for pixel results to the new results html file
         https://bugs.webkit.org/show_bug.cgi?id=58827
 
